--- a/src/assets/CSS/ViewForest.module.css
+++ b/src/assets/CSS/ViewForest.module.css
@@ -1,6 +1,6 @@
 #forest {
 	position: relative;
-	width: 300px;
+	width: 400px;
 	height: 300px;
 	overflow: hidden;
 	display: block;
